corpo do formulario

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Login</title>
     <link rel="stylesheet" href="estilos/style.css">
     <link rel="stylesheet" href="estilos/media-query.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"/>
 </head>
 <body>
     <main>
@@ -16,7 +17,30 @@
             <div id="formulario">
                 <h1>Login</h1>
                 <p>Seja bem-vindo(a) novamente. Faça login para configurar o seu ambiente.</p>
-                <form action="login.php" method="post">
+                <form action="login.php" method="post" autocomplete="on">
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            account_circle
+                            </span>
+                        <input type="email" name="login" id="ilogin" placeholder=" E-mail" autocomplete="email" required maxlength="30">
+                        <label for="ilogin"></label>
+
+                    </div>
+                    <div class="campo">
+                        <span class="material-symbols-outlined">
+                            password
+                            </span>
+                        <input type="password" name="senha" id="isenha" placeholder="Senha" autocomplete="current-password" required minlength="8" maxlength="20">
+                         <label for="isenha"></label>
+
+                    </div>
+                    <input type="submit" value="Entrar">
+                    <a href="esqueci.html">
+                        Esqueci a senha <span class="material-symbols-outlined">
+                            mail
+                        </span>
+                    </a>
+
 
                 </form>
 
